# Solaris

./: .gitignore  Cargo.toml  README.md
src/: app.rs  auto.rs  format.rs  hint.rs  input.rs  main.rs  save.rs
src/game/: achievement.rs  economy.rs  mod.rs  prestige.rs  producer.rs  tick.rs  upgrade.rs
src/ui/: achievements.rs  animation.rs  boss.rs  header.rs  help.rs  hint.rs  layout.rs  mod.rs  prestige.rs  producers.rs  stats.rs  upgrades.rs  visualization.rs
tests/: integration.rs
wiki/: README.md  achievements.md  auto-mode.md  controls.md  getting-started.md  mechanics.md  prestige.md  producers.md  strategy.md  upgrades.md
