[package]
name = "solaris"
version = "0.1.0"
edition = "2021"
description = "Terminal-based idle game where players build a solar energy empire"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"

[dev-dependencies]
tempfile = "3"
